force-app/main/default/objects/GoalItem__c/GoalItem__c.object-meta.xml
<CustomObject>
    <description>Goal Item object for tracking individual goal line items and performance</description>
    <label>Goal Item</label>
    <nameField>
        <displayFormat>GI-{0000000}</displayFormat>
        <label>Goal Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Items</pluralLabel>
    <recordTypes>
        <fullName>Performance</fullName>
        <active>true</active>
        <description>Goal item tracking performance metrics</description>
        <label>Performance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <description>Goal item for specific product target</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProductFamily</fullName>
        <active>true</active>
        <description>Goal item for product family target</description>
        <label>ProductFamily</label>
    </recordTypes>
    <recordTypes>
        <fullName>PaymentCondition</fullName>
        <active>true</active>
        <description>Goal item for payment condition target</description>
        <label>PaymentCondition</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>