force-app/main/default/objects/GoalItem__c/fields/AchievedPercentage__c.field-meta.xml
<CustomField>
    <fullName>AchievedPercentage__c</fullName>
    <description>Percentage of target value actually achieved (aggregated into Goal Commission Percentage)</description>
    <label>Achieved Percentage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>