force-app/main/default/objects/GoalItem__c/fields/GoalCommissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>GoalCommissionPercentage__c</fullName>
    <description>Commission percentage for this specific goal item</description>
    <label>Goal Commission Percentage</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>