force-app/main/default/objects/GoalItem__c/fields/NegotiatedValue__c.field-meta.xml
<CustomField>
    <fullName>NegotiatedValue__c</fullName>
    <description>Value after negotiation</description>
    <label>Negotiated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>