force-app/main/default/objects/GoalItem__c/fields/RealizedValue__c.field-meta.xml
<CustomField>
    <fullName>RealizedValue__c</fullName>
    <description>Actual value achieved</description>
    <label>Realized Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>