force-app/main/default/objects/GoalItem__c/fields/TargetPaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>TargetPaymentCondition__c</fullName>
    <description>Link to custom PaymentCondition__c object for goal item filtering by payment condition</description>
    <label>Target Payment Condition</label>
    <referenceTo>PaymentCondition__c</referenceTo>
    <relationshipLabel>Goal Items</relationshipLabel>
    <relationshipName>GoalItems</relationshipName>
    <type>Lookup</type>
</CustomField>