force-app/main/default/objects/GoalItem__c/fields/TargetProduct__c.field-meta.xml
<CustomField>
    <fullName>TargetProduct__c</fullName>
    <description>Link to standard Product2 object for goal item filtering</description>
    <label>Target Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Goal Items</relationshipLabel>
    <relationshipName>GoalItems</relationshipName>
    <type>Lookup</type>
</CustomField>