force-app/main/default/objects/GoalItem__c/fields/TargetProductFamily__c.field-meta.xml
<CustomField>
    <fullName>TargetProductFamily__c</fullName>
    <description>Link to custom ProductFamily__c object for goal item filtering by product family</description>
    <label>Target Product Family</label>
    <referenceTo>ProductFamily__c</referenceTo>
    <relationshipLabel>Goal Items</relationshipLabel>
    <relationshipName>GoalItems</relationshipName>
    <type>Lookup</type>
</CustomField>