force-app/main/default/objects/GoalItem__c/recordTypes/PaymentCondition.recordType-meta.xml
<RecordType>
    <fullName>PaymentCondition</fullName>
    <active>true</active>
    <description>Goal item for payment condition target</description>
    <label>PaymentCondition</label>
</RecordType>