force-app/main/default/objects/GoalItem__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>Goal item for specific product target</description>
    <label>Product</label>
</RecordType>