force-app/main/default/objects/GoalItem__c/recordTypes/ProductFamily.recordType-meta.xml
<RecordType>
    <fullName>ProductFamily</fullName>
    <active>true</active>
    <description>Goal item for product family target</description>
    <label>ProductFamily</label>
</RecordType>